update goimapnotify for posteo IMAP IDLE

--- a/mutt/.config/imapnotify/posteo.conf
+++ b/mutt/.config/imapnotify/posteo.conf
@@ -5,10 +5,10 @@
   "tlsOptions": {
     "rejectUnauthorized": true
   },
-  "usernameCmd": "bw get username posteo.de",
-  "passwordCmd": "bw get password posteo.de",
+  "usernameCmd": "/usr/local/bin/bw get username posteo.de",
+  "passwordCmd": "/usr/local/bin/bw get password posteo.de",
   "xoauth2": false,
-  "onNewMail": "mbsync posteo",
+  "onNewMail": "/usr/local/bin/mbsync posteo:INBOX",
   "onNewMailPost": "",
   "wait": 20,
   "boxes": [
