--- a/dcmp/dcmp.conf.sample
+++ b/dcmp/dcmp.conf.sample
@@ -1,3 +1,3 @@
-docker_compose_bin="docker compose"
-working_dir="/usr/local/containers"
-verbose=false
+DCMP_WORKING_DIR=""
+DCMP_BACKUP_DIR=""
+DCMP_VERBOSE=true
