Add post rsync variable for --delete

--- a/dcmp/dcmp.conf.example
+++ b/dcmp/dcmp.conf.example
@@ -3,5 +3,6 @@
 # DCMP_SKIP_SCRIPT=""
 # DCMP_DOCKER_COMPOSE_BIN="/usr/bin/docker compose"
 # DCMP_RSYNC_BIN="/usr/bin/rsync"
-# DCMP_RSYNC_FLAGS="-aH"
+DCMP_RSYNC_PRE_FLAGS="-aH"
+DCMP_RSYNC_POST_FLAGS="--delete-delay"
 # DCMP_VERBOSE=true
